# KSY , main 크기 조절 수정

--- a/app/views/main/main.jade
+++ b/app/views/main/main.jade
@@ -51,7 +51,7 @@ block content
     #page-wrapper
         .col-lg-9
             .row
-                .col-lg-3.col-md-6(style='margin-top:20px;')
+                .col-lg-3(style='margin-top:20px;')
                     .panel.panel-default
                         .panel-heading
                             .row
@@ -66,7 +66,7 @@ block content
                                 span.pull-right
                                     i.fa.fa-arrow-circle-right
                                 .clearfix
-                .col-lg-3.col-md-6(style='margin-top:20px;')
+                .col-lg-3(style='margin-top:20px;')
                     .panel.panel-default
                         .panel-heading
                             .row
@@ -81,7 +81,7 @@ block content
                                 span.pull-right
                                     i.fa.fa-arrow-circle-right
                                 .clearfix
-                .col-lg-3.col-md-6(style='margin-top:20px;')
+                .col-lg-3(style='margin-top:20px;')
                     .panel.panel-default
                         .panel-heading
                             .row
@@ -96,7 +96,7 @@ block content
                                 span.pull-right
                                     i.fa.fa-arrow-circle-right
                                 .clearfix
-                .col-lg-3.col-md-6(style='margin-top:20px;')
+                .col-lg-3(style='margin-top:20px;')
                     .panel.panel-default
                         .panel-heading
                             .row
