--- a/app/views/main/main.jade
+++ b/app/views/main/main.jade
@@ -24,7 +24,7 @@ block head
 
 block content
     #wrapper
-        .col-lg-3
+        .col-lg-3.visible-lg
             .sidebar(role='navigation', style='margin-top: 0')
                 .sidebar-nav.navbar-collapse
                     ul#side-menu.nav
