--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -138,7 +138,7 @@ html
                                 span.button-checkbox
                                     button.btn(type='button', data-color='info') 아이디 저장
                                     input#remember_me.hidden(type='checkbox', name='remember_me', checked='checked')
-                                    a.btn.btn-link.pull-right(href='') 비밀번호 기기이러이라ㅓ미나러미럼아ㅣ렁맒미ㅓㄹ미ㅏ럼ㄴㅇ기~
+                                    a.btn.btn-link.pull-right(href='') 비밀번호 ㅇㄻㄴㄻㅇㄻㄹㅇㄴㅁㄻ~
                                 hr.colorgraph
                                 .row
                                     .col-xs-6.col-sm-6.col-md-6
