# LHI 로그인 수정

--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -60,7 +60,7 @@ html
 
         block neck
     body
-    - if(false){ //외부사용자
+    - if(true){ //외부사용자
             div.navbar.navbar-default.navbar-fixed-top
                 div.container
                     div.navbar-header
