--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -132,13 +132,13 @@ html
                                 h2 로그인하세요.
                                 hr.colorgraph
                                 .form-group
-                                    input#email.form-control.input-lg(type='email', name='email', placeholder='Email Address')
+                                    input#email.form-control.input-lg(type='email', name='email', value='#{nameCookie}' placeholder='Email Address')
                                 .form-group
                                     input#password.form-control.input-lg(type='password', name='password', placeholder='Password')
                                 span.button-checkbox
                                     button.btn(type='button', data-color='info') 아이디 저장
-                                    input#remember_me.hidden(type='checkbox', name='remember_me', checked='checked')
-                                    a.btn.btn-link.pull-right(href='') 비밀번호 찾기테스트
+                                    input#remember_me.hidden(type='checkbox', name='idsavecheck', checked=('true'==='#{saveCookie}' ? 'checked' : undefined))
+                                    a.btn.btn-link.pull-right(href='') 비밀번호 찾기
                                 hr.colorgraph
                                 .row
                                     .col-xs-6.col-sm-6.col-md-6
