--- a/app/views/main/main.jade
+++ b/app/views/main/main.jade
@@ -19,8 +19,9 @@ block head
     script(src='/vendor/morrisjs/morris.min.js')
     script(src='/layouts/sb-admin-2.js')
 
-    //추후 삭제
+    //추후 삭제(도표 표시용)
     script(src='/data/morris-data.js')
+    script(src='/data/flot-data.js')
 
 block content
     #wrapper
