--- a/app/views/manage/companyNew.jade
+++ b/app/views/manage/companyNew.jade
@@ -1,7 +1,9 @@
 extends ../layouts/default
 block head
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
+    link(rel='stylesheet', href='/vendor/bootstrap-3.3.7/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/vendor/bootstrap-3.3.7/css/bootstrap-theme.min.css')
+    script(src='/vendor/bootstrap-3.3.7/js/bootstrap.min.js')
+    script(src='/vendor/jquery/jquery.js')
     script.
         $("#save").click(function() {
             alert("test alert");
