--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -118,10 +118,10 @@ html
                 });
             });     
     body
-        //-  #video-wrapper.video-wrapper
-        //-      video#bgvid(autoplay='', loop='')
-        //-          source(src='/m-bg.mp4', type='video/webm')
-        //-          source(src='/m-bg.mp4', type='video/mp4')
+        //- #video-wrapper.video-wrapper
+        //-     video#bgvid(autoplay='', loop='')
+        //-         source(src='/isu/video/m-bg.mp4', type='video/webm')
+        //-         source(src='/isu/video/m-bg.mp4', type='video/mp4')
                 
         .content
             .container                      
@@ -129,15 +129,19 @@ html
                     .col-xs-12.col-sm-8.col-md-6.col-sm-offset-2.col-md-offset-3
                         form#loginForm(action='/index' method='post' name='login')
                             fieldset
-                                h2 로그인하세요.
+                                -if(messege == null){
+                                    h2 로그인하세요.
+                                -}else{
+                                    h3 #{message}
+                                -} 
                                 hr.colorgraph
                                 .form-group
-                                    input#email.form-control.input-lg(type='email', name='email', value='#{nameCookie}' placeholder='Email Address')
+                                    input#email.form-control.input-lg(type='email', name='email', value=('#{email}' == 'undefined' ? '' : '#{email}') placeholder='Email Address')
                                 .form-group
                                     input#password.form-control.input-lg(type='password', name='password', placeholder='Password')
                                 span.button-checkbox
                                     button.btn(type='button', data-color='info') 아이디 저장
-                                    input#remember_me.hidden(type='checkbox', name='idsavecheck', checked=('true'==='#{saveCookie}' ? 'checked' : undefined))
+                                    input#remember_me.hidden(type='checkbox', name='remember_me', checked=('true'==='#{remember_me}' ? 'on' : undefined))
                                     a.btn.btn-link.pull-right(href='') 비밀번호 찾기
                                 hr.colorgraph
                                 .row
