# KSY, 사이드바 수정

--- a/app/views/main/main.jade
+++ b/app/views/main/main.jade
@@ -41,13 +41,76 @@ block content
                     li
                         a(href='#')
                             i.fa.fa-sitemap.fa-fw
-                            |  Multi-Level Dropdown
+                            |  문의방법 및 담당자
                             span.fa.arrow
                         ul.nav.nav-second-level
                             li
-                                a(href='#') Second Level Item
+                                a(href='#') 문의하기
                             li
-                                a(href='#') Second Level Item
+                                a(href='#') 처리진행현황
+                            li
+                                a(href='#') 자주묻는질문과답
+                            li
+                                a(href='#') 처리된내용검색
+                    li
+                        a(href='#')
+                            i.fa.fa-sitemap.fa-fw
+                            |  SD 담당자
+                            span.fa.arrow
+                        ul.nav.nav-second-level
+                            li
+                                a(href='#') 상담접수(전화)
+                            li
+                                a(href='#') 나의업무처리현황
+                            li
+                                a(href='#') 나의업무지정
+                            li
+                                a(href='#') 월별처리내역
+                    li
+                        a(href='#')
+                            i.fa.fa-sitemap.fa-fw
+                            |  SD 검색/통계
+                            span.fa.arrow
+                        ul.nav.nav-second-level
+                            li
+                                a(href='#') 전체내용검색
+                            li
+                                a(href='#') 회사별 상위업무통계
+                            li
+                                a(href='#') 상위별 하위업무통계
+                            li
+                                a(href='#') 미해결 현황
+                            li
+                                a(href='#') 담당자별월별처리내역
+                            li
+                                a(href='#') 처리구분별처리내역
+                    li
+                        a(href='#')
+                            i.fa.fa-sitemap.fa-fw
+                            |  SD 기본정보
+                            span.fa.arrow
+                        ul.nav.nav-second-level
+                            li
+                                a(href='#') 상위업무조회
+                            li
+                                a(href='#') 하위업무조회
+                            li
+                                a(href='#') 회사정보관리(외부)
+                            li
+                                a(href='#') 사원정보관리(내외)
+                            li
+                                a(href='#') 회사별상위업무지정
+                            li
+                                a(href='#') 처리구분코드조회
+                            li
+                                a(href='#') 업무별담당자현황
+                            li
+                                a(href='#') 자주묻는질문과답
+                    li
+                        a(href='#')
+                            i.fa.fa-sitemap.fa-fw
+                            |  SD Dashboard
+                            span.fa.arrow
         #page-wrapper
             .row
                 .col-lg-3(style='margin-top:20px;')
