--- a/app/views/main/main.jade
+++ b/app/views/main/main.jade
@@ -25,7 +25,7 @@ block head
 
 block content
     #wrapper
-        .sidebar(role='navigation', style='margin-top: 0').col-lg-3.visible-lg
+        .sidebar(role='navigation', style='margin-top: 0').visible-lg
             .sidebar-nav.navbar-collapse
                 ul#side-menu.nav
                     li.sidebar-search
@@ -36,11 +36,11 @@ block content
                                     i.fa.fa-search
                     li
                         a(href='#')
-                            i.fa.fa-dashboard.fa-fw
+                            i.fa.fa-desktop.fa-fw
                             |  HOME
-                    li
+                    li.active
                         a(href='#')
-                            i.fa.fa-sitemap.fa-fw
+                            i.fa.fa-th-list.fa-fw
                             |  문의방법 및 담당자
                             span.fa.arrow
                         ul.nav.nav-second-level
@@ -52,9 +52,9 @@ block content
                                 a(href='#') 자주묻는질문과답
                             li
                                 a(href='#') 처리된내용검색
-                    li
+                    li.active
                         a(href='#')
-                            i.fa.fa-sitemap.fa-fw
+                            i.fa.fa-th-list.fa-fw
                             |  SD 담당자
                             span.fa.arrow
                         ul.nav.nav-second-level
@@ -68,7 +68,7 @@ block content
                                 a(href='#') 월별처리내역
                     li
                         a(href='#')
-                            i.fa.fa-sitemap.fa-fw
+                            i.fa.fa-th-list.fa-fw
                             |  SD 검색/통계
                             span.fa.arrow
                         ul.nav.nav-second-level
@@ -86,7 +86,7 @@ block content
                                 a(href='#') 처리구분별처리내역
                     li
                         a(href='#')
-                            i.fa.fa-sitemap.fa-fw
+                            i.fa.fa-th-list.fa-fw
                             |  SD 기본정보
                             span.fa.arrow
                         ul.nav.nav-second-level
@@ -108,7 +108,7 @@ block content
                                 a(href='#') 자주묻는질문과답
                     li
                         a(href='#')
-                            i.fa.fa-sitemap.fa-fw
+                            i.fa.fa-th-list.fa-fw
                             |  SD Dashboard
                             span.fa.arrow
         #page-wrapper
