# LHI 로그인 화면 회사소개 추가

--- a/app/views/main/main.jade
+++ b/app/views/main/main.jade
@@ -9,7 +9,7 @@ block head
     link(href='/vendor/bootstrap-3.3.7/css/bootstrap.min.css', rel='stylesheet')
     link(href='/vendor/bootstrap-3.3.7/css/bootstrap-theme.min.css', rel='stylesheet')
     link(href='/vendor/metisMenu/metisMenu.min.css', rel='stylesheet')
-    link(href='/layouts/sb-admin-2.css', rel='stylesheet')
+    link(href='/layouts/sb-admin-2.min.css', rel='stylesheet')
     link(href='/vendor/morrisjs/morris.css', rel='stylesheet')
     link(type='text/css', href='/vendor/font-awesome/css/font-awesome.min.css', rel='stylesheet')
     script(src='/vendor/jquery/jquery.min.js')
