#PSW MANAGE COMMIT

--- a/app/views/manage/company.jade
+++ b/app/views/manage/company.jade
@@ -13,13 +13,13 @@ block content
 
                     .card-box
                     h4.m-t-0.header-title
-                        b Swipe Table
+                        b Table
                     p.text-muted.font-13
-                        | Your awesome text goes here.
+                        | 
                     table.tablesaw.table.m-b-0(data-tablesaw-mode='swipe')
                         thead
                         tr
-                            th.title(scope='col', data-tablesaw-sortable-col='', data-tablesaw-priority='persist') Movie Title
+                            th.title(scope='col', data-tablesaw-sortable-col='', data-tablesaw-priority='persist') 회사명
                             th(scope='col', data-tablesaw-sortable-col='', data-tablesaw-sortable-default-col='', data-tablesaw-priority='3') Rank
                             th(scope='col', data-tablesaw-sortable-col='', data-tablesaw-priority='2') Year
                             th(scope='col', data-tablesaw-sortable-col='', data-tablesaw-priority='1') Rating
