--- a/app/views/manage/companyNew.jade
+++ b/app/views/manage/companyNew.jade
@@ -14,7 +14,7 @@ block head
 block content
     .masthead.clearfix
         .inner
-            h3.masthead-brand 회사정보관리
+            h3.masthead-brand 회사정보관리2
             br
             .row
                 .col-md-12
