--- a/app/views/manage/companyNew.jade
+++ b/app/views/manage/companyNew.jade
@@ -5,11 +5,8 @@ block head
     script(src='/vendor/jquery/jquery.js')
     script(src='/vendor/bootstrap-3.3.7/js/bootstrap.min.js')
     script(src='/vendor/jquery/jquery.js')
-     script.
-        $("#save").click(function() {
-            alert("test alert");
-        });
-
+    script.
+        
         
 
 block content
@@ -89,7 +86,7 @@ block content
                         //-input.form-control(type='button') 
                         //.form-group
                         //- $("#save").click(function(){}
-                        //button.btn.btn-info.btn-lg(type='button', data-toggle='modal', data-target='#myModal' onblur='alerts()') 저장
+                        button.btn.btn-info.btn-md(type='button', data-toggle='modal', data-target='#myModal' onblur='alerts()') 저장
             br
             
 
