# 메인 비율 수정

--- a/app/views/main/main.jade
+++ b/app/views/main/main.jade
@@ -25,7 +25,7 @@ block head
 
 block content
     #wrapper
-        .sidebar(role='navigation', style='margin-top: 0').visible-lg
+        .sidebar(role='navigation', style='margin-top: 0').visible-lg.col-lg-3
             .sidebar-nav.navbar-collapse
                 ul#side-menu.nav
                     li.sidebar-search
@@ -112,7 +112,7 @@ block content
                             |  SD Dashboard
                             span.fa.arrow
         #page-wrapper
-            .row
+            .row.col-lg-9
                 .col-lg-3(style='margin-top:20px;')
                     .panel.panel-default
                         .panel-heading
