--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -71,13 +71,14 @@ html
                             span.icon-bar
                     div.navbar-collapse.my-navbar-collapse.collapse
                         ul.nav.navbar-nav
-                            li: a(href='/main') Home
+                            li: a(href='/main/') Home
                             li: a(href='/account/') FAQ
                             li: a(href='/question/new') 문의하기
                             li: a(href='/question/') 처리진행현황
                             li: a(href='/account/') 자주묻는질문과답
                             li: a(href='/register/') 계정등록
                             li: a(href='/manage/company') 회사정보관리
+                            li: a(href='/usermanage/new') 테스트
                         ul.nav.navbar-nav.navbar-right
                             if user && user.username
                                 li: a(href='#{user.defaultReturnUrl}')
