--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -3,7 +3,8 @@ html
     head
         title #{title}
 
-        meta(name='viewport', content='width=device-width, initial-scale=1.0')
+        meta(name='viewport', content='width=device-width, initial-scale=1.0')      
+        meta(name='google-site-verification', content='8dL8-JtafRwPb9mqiolYLGX-gJQ6iWrzWrHkZRnE2Uo')
         link(rel='stylesheet', href='/vendor/bootstrap-3.3.7/css/bootstrap.min.css')
         link(rel='stylesheet', href='/vendor/bootstrap-3.3.7/css/bootstrap-theme.min.css')
         script(src='/vendor/jquery/jquery.js')
